# rp2040

apps/agmsense/: Cargo.toml
apps/agmsense/src/: main.rs
apps/blinkenlight/: Cargo.toml
apps/blinkenlight/.cargo/: config.toml
apps/blinkenlight/src/: main.rs
