[package]
authors = ["Jeff Glaum <jeffglaum@live.com>"]
edition = "2018"
readme = "README.md"
name = "blinkenlight"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
fugit = "0.3.7"
mpu9250 = { version = "0.25.0", features = ["i2c"] }
panic-halt = "0.2.0"
rp2040-boot2 = "0.3.0"
rp2040-hal = { version = "0.10.2", features = ["critical-section-impl"] }
rtt-target = "0.5.0"

[[bin]]
name = "blinkenlight"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
